usermng.js  add

--- a/templates/gjobs/groupindex.html
+++ b/templates/gjobs/groupindex.html
@@ -68,7 +68,7 @@
             <td id="Exc-host">{{his.exchost}}</td>
             <td id="Status"  >{{his.get_status_display}}</td>
             <td id="Result"  >{{his.result}}</td>
-            <td id="Operate" class ="last-th" > <div class = "button rmv-c small bigrounded">delete</div> </td>
+            <td id="Operate" class ="last-th" > <div class = "button rmv-c small bigrounded hisdel">delete</div> </td>
         </tr>
 {%endfor%}
 {%else%}
