--- a/static/gjobs/css/gjobs.less
+++ b/static/gjobs/css/gjobs.less
@@ -443,3 +443,129 @@ p {
         font-size: .8em;
     }
 }
+
+.proj-add-bar {
+    .proj-bar;
+    background-color:#ffe; 
+    font-size:30px;
+    font-weight:700;
+    color:@c-bar*1.1;
+    &:active{
+        font-size:22px;
+    }
+}
+.add-grp-bar{
+    .proj-add-bar;
+}
+@c-red : #dd4550;
+
+.add-box{
+    display:none;
+}
+.add-grp-box{
+    .add-box;
+}
+.add-yes {
+    height:32px;
+    background-color:@c-red;
+    line-height:32px;
+    color:#fff;
+    text-align:center;
+    border-top:1px #fff solid;
+    border-bottom:1px #fff solid;
+    &:hover {
+    // background-color:@c-red*0.9;
+    }
+    &:active {
+    background-color:@c-red*0.9;
+    }
+}
+.add-grp-yes{
+    .add-yes;
+}
+.add-input {
+    height:@bar-height;
+    line-height:@bar-height;
+    background-color:@c-bar;
+    color:#fff;
+    text-align:center;
+    vertical-align: middle;
+    border-top:1px #fff solid;
+    border-bottom:1px #fff solid;
+}
+.add-grp-input{
+    .add-input;
+}
+.input_field{
+    min-width:146px;
+    border:@c-bar 2px solid;
+    color:@c-bar;
+    // border:none;
+    // border-bottom:2px #aaa solid;
+    min-height:30px;
+    margin-bottom:2px;
+    text-align:center;
+    // // background-color:none transparent;
+    // background: none repeat scroll 0% 0% transparent;
+
+// position: relative;
+// display: block;
+// float: right;
+// padding: 0.8em;
+// width: 60%;
+// border: medium none;
+// border-radius: 0px;
+// background: none repeat scroll 0% 0% #F0F0F0;
+// color: #AAA;
+// font-weight: bold;
+// font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;   
+}
+
+.input_field-hoshi{
+    // width: 100%;
+    // background: none repeat scroll 0% 0% #FFF;
+    box-shadow: 0px 0px 0px 2px transparent;
+    // color: #ECA29B;
+    transition: box-shadow 0.3s ease 0s;
+
+// margin-top: 1em;
+// padding: 0.85em 0.15em;
+// width: 100%;
+// background: none repeat scroll 0% 0% transparent;
+// color: #595F6E;    
+}
+
+
+
+@keyframes spinner {
+    to {transform: rotate(360deg);}
+}
+ 
+@-webkit-keyframes spinner {
+    to {-webkit-transform: rotate(360deg);}
+}
+ 
+.spinner {
+    min-width: 50px;
+    min-height: 50px;
+}
+ 
+.spinner:before {
+    content: 'Loading…';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 46px;
+    height: 46px;
+    margin-top: -10px;
+    margin-left: -10px;
+}
+ 
+.spinner:not(:required):before {
+    content: '';
+    border-radius: 50%;
+    border-top: 2px solid #03ade0;
+    border-right: 2px solid transparent;
+    animation: spinner .6s linear infinite;
+    -webkit-animation: spinner .6s linear infinite;
+}
