--- a/templates/gjobs/css.html
+++ b/templates/gjobs/css.html
@@ -6,6 +6,6 @@
     <!-- <script src="{% static 'pinx/wtfall/js/less.jss' %}" type="text/javascript"></script> -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
     <script src="{% static 'gjobs/js/jquery.min.2.1.1.js'%}"></script>
-    <script src="{% static 'gjobs/js/jquery-1.11.2.js'%}"></script>
+    <!-- <script src="{% static 'gjobs/js/jquery-1.11.2.js'%}"></script> -->
     <script src="{% static 'gjobs/js/gjobs.js'%}"></script>
 {% endblock %}        
