--- a/templates/gjobs/groupindex.html
+++ b/templates/gjobs/groupindex.html
@@ -46,8 +46,8 @@
             <td id="JobsID"  >{{his.jobsid}}</td>
             <td id="User"    >{{his.user}}</td>
             <td id="Owner"   >{{his.owner}}</td>
-            <td id="ST-time" >{{his.sttime}}</td>
-            <td id="ED-time" >{{his.edtime}}</td>
+            <td id="ST-time" >{{his.sttime|date:"M/d H:i"}}</td>
+            <td id="ED-time" >{{his.edtime|date:"M/d H:i"}}</td>
             <td id="Spend"   >{{his.spend}}</td>
             <td id="Exc-host">{{his.exchost}}</td>
             <td id="Status"  >{{his.get_status_display}}</td>
@@ -62,8 +62,8 @@
             <td id="JobsID"  >{{his.jobsid}}</td>
             <td id="User"    >{{his.user}}</td>
             <td id="Owner"   >{{his.owner}}</td>
-            <td id="ST-time" >{{his.sttime}}</td>
-            <td id="ED-time" >{{his.edtime}}</td>
+            <td id="ST-time" >{{his.sttime|date:"M/d H:i"}}</td>
+            <td id="ED-time" >{{his.edtime|date:"M/d H:i"}}</td>
             <td id="Spend"   >{{his.spend}}</td>
             <td id="Exc-host">{{his.exchost}}</td>
             <td id="Status"  >{{his.get_status_display}}</td>
